[package]
name = "npmrcbrew"
version = "0.1.0"
edition = "2021"
authors = ["hisasann25@gmail.com"]
repository = "https://github.com/hisasann/npmrcbrew"
keywords = ["npm", "npmrc", "nodejs"]
license-file = "LICENSE"
readme = "README.md"
description = ".npmrc config manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
